--- a/package.json
+++ b/package.json
@@ -36,17 +36,18 @@
   ],
   "dependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "body-parser": "^1.17.1",
+    "babel-preset-env": "^1.6.1",
+    "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
-    "es6-promise": "^4.1.1",
-    "express": "^4.15.2",
+    "csv-parse": "^2.0.0",
+    "es6-promise": "^4.2.4",
+    "express": "^4.16.2",
     "isomorphic-fetch": "^2.2.1",
-    "json2csv": "^3.11.1",
-    "morgan": "^1.7.0",
+    "json2csv": "^3.11.5",
+    "morgan": "^1.9.0",
     "pug": "^2.0.0-beta11",
     "ramda": "^0.24.1",
-    "request": "^2.81.0",
+    "request": "^2.83.0",
     "rimraf": "^2.6.1",
     "x2js": "^3.1.1"
   },
@@ -55,11 +56,11 @@
     "babel-register": "^6.24.1",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^20.0.0",
-    "eslint-watch": "^3.1.0",
+    "eslint-watch": "^3.1.3",
     "jest": "^20.0.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.14.11",
     "supertest": "^3.0.0"
   },
   "babel": {
