--- a/package.json
+++ b/package.json
@@ -35,33 +35,34 @@
     "eslint"
   ],
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "body-parser": "^1.18.2",
-    "cheerio": "^1.0.0-rc.2",
-    "csv-parse": "^4.4.6",
-    "es6-promise": "^4.2.4",
-    "express": "^4.16.2",
-    "isomorphic-fetch": "^2.2.1",
-    "json2csv": "^3.11.5",
-    "morgan": "^1.9.0",
-    "pug": "^2.0.0-beta11",
-    "ramda": "^0.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.19.0",
+    "braces": "^3.0.2",
+    "cheerio": "^1.0.0-rc.9",
+    "csv-parse": "^4.15.4",
+    "es6-promise": "^4.2.8",
+    "express": "^4.17.1",
+    "isomorphic-fetch": "^3.0.0",
+    "json2csv": "^5.0.6",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2",
+    "ramda": "^0.27.1",
     "request": "^2.83.0",
-    "rimraf": "^2.6.1",
-    "x2js": "^3.1.1"
+    "rimraf": "^3.0.2",
+    "x2js": "^3.4.1"
   },
   "devDependencies": {
-    "babel-jest": "^20.0.0",
-    "babel-register": "^6.24.1",
-    "dotenv": "^4.0.0",
-    "eslint": "^4.18.2",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^20.0.0",
-    "eslint-watch": "^3.1.3",
-    "jest": "^20.0.0",
-    "nodemon": "^1.14.11",
-    "supertest": "^3.0.0"
+    "babel-jest": "^26.6.3",
+    "babel-register": "^6.26.0",
+    "dotenv": "^9.0.2",
+    "eslint": "^7.26.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-watch": "^7.0.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "babel": {
     "presets": [
